--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-3-helpers",
+  "name": "@wyxos/vue-3-helpers",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
