--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite --config demo/vite.config.js",
+    "build": "vite build --config demo/vite.config.js",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@oruga-ui/oruga-next": "^0.5.5",
+    "axios": "^0.27.2",
+    "vue": "^3.2.37"
+  },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^3.0.0",
     "chalk": "^5.0.1",
-    "inquirer": "^9.1.0"
+    "inquirer": "^9.1.0",
+    "vite": "^3.0.0"
   }
 }
