--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "@oruga-ui/oruga-next": "^0.5.5",
+    "@oruga-ui/theme-bulma": "^0.2.6",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "vue": "^3.2.37"
@@ -34,6 +35,8 @@
     "@vitejs/plugin-vue": "^3.0.0",
     "chalk": "^5.0.1",
     "inquirer": "^9.1.0",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
     "vite": "^3.0.0"
   }
 }
