--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "exports": {
     ".": {
       "import": "./dist/vue-helpers.js",
-      "require": "./dist/vue-helpers.cjs"
+      "require": "./dist/vue-helpers.umd.cjs"
     }
   },
   "scripts": {
