--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "type": "module",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "main": "./dist/vue-helpers.umd.cjs",
   "module": "./dist/vue-helpers.js",
