--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wyxos/vue-3-helpers",
   "version": "1.1.11",
   "description": "",
-  "main": "dist/vue-helpers",
+  "main": "dist/vue-helpers.js",
   "scripts": {
     "dev": "vite --config demo/vite.config.js",
     "build": "vite --config demo/vite.config.js build",
