--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@wyxos/vue-3-helpers",
-  "version": "1.1.14",
+  "version": "1.1.15",
   "description": "",
-  "main": "dist/vue-helpers.umd.js",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/my-lib.umd.cjs",
+  "module": "./dist/my-lib.js",
   "scripts": {
     "dev": "vite --config demo/vite.config.js",
     "build": "vite --config demo/vite.config.js build",
