--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@wyxos/vue-3-helpers",
-  "version": "1.1.15",
+  "version": "1.1.16",
   "description": "",
   "type": "module",
   "files": [
     "dist"
   ],
-  "main": "./dist/my-lib.umd.cjs",
-  "module": "./dist/my-lib.js",
+  "main": "./dist/vue-helpers.umd.cjs",
+  "module": "./dist/vue-helpers.js",
   "scripts": {
     "dev": "vite --config demo/vite.config.js",
     "build": "vite --config demo/vite.config.js build",
