--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wyxos/vue-3-helpers",
-  "version": "1.1.19",
+  "version": "2.0.0",
   "description": "",
   "type": "module",
   "files": [
@@ -21,11 +21,13 @@
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "vue", "helper functions", "helper components", "oruga helpers"
+  ],
+  "author": "Wyxos",
   "license": "ISC",
   "dependencies": {
-    "@oruga-ui/oruga-next": "^0.5.5",
+    "@oruga-ui/oruga-next": "^0.5.9",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "vue": "^3.2.37"
