--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@oruga-ui/oruga-next": "^0.5.9",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
